add jobs for auth
