# app/Http/Requests/Auth/LoginRequest.php
@@ -15,8 +15,8 @@ class LoginRequest extends FormRequest
         public function rules(): array
     {
         return [
-            'email' => ['required','email'],
-            'password' => ['required'],
+            'username' => 'required|string',
+            'password' => 'required|string',
         ];
     }
 }
