# app/Http/Requests/Auth/RegisterRequest.php
@@ -18,7 +18,6 @@ class RegisterRequest extends FormRequest
         return [
             'name' => ['required', 'string', 'max:255'],
             'email' => ['required', 'email', 'max:255', 'unique:users,email'],
-            'password' => ['required', 'min:8', 'confirmed'],
         ];
     }
 }
