# resources/views/emails/welcome.blade.php
@@ -1,0 +1,4 @@
+<h2>Welcome!</h2>
+
+<p>Username: {{ $user->username }}</p>
+<p>Password: {{ $password }}</p>
