# storage/api-docs/api-docs.json
@@ -19,21 +19,13 @@
                             "schema": {
                                 "required": [
                                     "name",
-                                    "email",
-                                    "password",
-                                    "password_confirmation"
+                                    "email"
                                 ],
                                 "properties": {
                                     "name": {
                                         "type": "string"
                                     },
                                     "email": {
-                                        "type": "string"
-                                    },
-                                    "password": {
-                                        "type": "string"
-                                    },
-                                    "password_confirmation": {
                                         "type": "string"
                                     }
                                 },
@@ -60,8 +52,12 @@
                     "content": {
                         "application/json": {
                             "schema": {
+                                "required": [
+                                    "username",
+                                    "password"
+                                ],
                                 "properties": {
-                                    "email": {
+                                    "username": {
                                         "type": "string"
                                     },
                                     "password": {
